# alicia_launcher

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  settings.json
src/launcher/: alicia.cpp  alicia.hpp  main.cpp
src/resources/: settings.json
toolchains/: linux-mingw.cmake
